# synt

./: .ackrc  .ctags  .eslintrc.json  .gitattributes  .gitignore  .hound.yml  .istanbul.yml  .jshintignore  .jshintrc  .npmignore  .reek.yml  .release-it.json  .rubocop.yml  .travis.yml  .vile.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  appveyor.yml  circle.yml  coffeelint.json  package-lock.json  package.json  readme.md  test-class.js  test-jsx.js  tsconfig.json  tslint.json
.circleci/: config.yml
haskell/: LICENSE  readme.md  synt.cabal
haskell/src/: Main.hs
haskell/src/Synt/: CLI.hs  Parser.hs  Similar.hs
haskell/src/Synt/Similar/: Jaccard.hs  Tanimoto.hs
haskell/test/: Spec.hs
haskell/test/Synt/: SimilarSpec.hs
lib/: cli.js  index.js  similar.js
lib/cli/: file_collector.js
lib/similar/: javascript.js  ngram.js  print.js  typescript.js
ruby/: .reek.yml  .rubocop.yml  Gemfile  readme.md  synt.gemspec
ruby/lib/: synt.rb
ruby/spec/: spec_helper.rb  synt_spec.rb
src/: cli.coffee  cli.ts  conf.coffee  error.coffee  index.coffee  index.ts  logger.coffee  similar.coffee  similar.ts  test.coffee
src/@types/: index.d.ts
src/cli/: exec.coffee  file_collector.ts  haskell.coffee  ruby.coffee
src/parser/: coffeescript.coffee  javascript.coffee  latin.coffee  typescript.coffee
src/similar/: experimental.coffee  jaccard.coffee  javascript.ts  ngram.coffee  ngram.ts  print.ts  tanimoto.coffee  typescript.ts
test/: mocha.opts  runner.coffee  spec.coffee
test/fixtures/: compare-cs-dissimilar-a.coffee  compare-cs-dissimilar-b.coffee  compare-cs-similar-a.coffee  compare-cs-similar-b.coffee  compare-js-dissimilar.js  compare-js-dissimilar_a.js  compare-js-dissimilar_b.js  compare-js-similar.js  compare-js-similar_a.js  compare-js-similar_b.js  l1.txt  l2.txt  sinon_chai.coffee  system.coffee  test_ts.ts
(+48 files in other folders)
