name:                synt
version:             0.1.2
synopsis:            Similar code analysis.
description:         Calculate percentage of similarity between two pieces of code.
homepage:            http://github.com/brentlintner/synt
bug-reports:         http://github.com/brentlintner/synt/issues
author:              Brent Lintner <brent.lintner@gmail.com>
maintainer:          Brent Lintner <brent.lintner@gmail.com>
license:             OtherLicense
license-file:        LICENSE
stability:           experimental
category:            Language
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
  LICENSE
  readme.md
  synt.cabal

source-repository head
  type: git
  location: https://github.com/brentlintner/synt

library
  default-language: Haskell2010
  hs-source-dirs:   src
  build-depends:
    base == 4.*,
    haskell-src-exts == 1.16.*,
    split == 0.2.*,
    regexpr == 0.5.*,
    argparser == 0.3.*

  exposed-modules:
    Synt.CLI
    Synt.Parser
    Synt.Similar
    Synt.Similar.Jaccard
    Synt.Similar.Tanimoto

executable synt
  default-language: Haskell2010
  hs-source-dirs:   src
  main-is:          Main.hs
  build-depends:
    base == 4.*,
    haskell-src-exts == 1.16.*,
    split == 0.2.*,
    regexpr == 0.5.*,
    argparser == 0.3.*

Test-Suite tests
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test, src
  main-is:          Spec.hs
  other-modules:
    Synt.CLI
    Synt.Parser
    Synt.Similar
    Synt.Similar.Jaccard
    Synt.Similar.Tanimoto
    Spec
    Synt.SimilarSpec
  build-depends:
    base == 4.*,
    haskell-src-exts == 1.16.*,
    split == 0.2.*,
    regexpr == 0.5.*,
    argparser == 0.3.*,
    hspec == 1.*,
    hpc == 0.6.*
